# DPVO

./: .gitignore  .gitmodules  LICENSE  README.md  demo.py  download_models_and_data.sh  environment.yml  evaluate_euroc.py  evaluate_icl_nuim.py  evaluate_kitti.py  evaluate_tartan.py  evaluate_tum.py  setup.py  train.py
DPRetrieval/: CMakeLists.txt  setup.py
DPRetrieval/src/: main.cpp
DPViewer/: CMakeLists.txt  setup.py
DPViewer/dpviewer/: CMakeLists.txt  __init__.py  viewer.cpp  viewer_cuda.cu  viewer_cuda.h
calib/: iphone.txt  kitti.txt  monovo.txt  viper.txt
config/: default.yaml  fast.yaml
dpvo/: ba.py  blocks.py  config.py  dpvo.py  extractor.py  logger.py  net.py  patchgraph.py  plot_utils.py  projective_ops.py  stream.py  utils.py
dpvo/altcorr/: __init__.py  correlation.cpp  correlation.py  correlation_kernel.cu
dpvo/data_readers/: augmentation.py  base.py  factory.py  frame_utils.py  rgbd_utils.py  tartan.py
dpvo/fastba/: __init__.py  ba.cpp  ba.py  ba_cuda.cu  block_e.cu  block_e.cuh
dpvo/lietorch/: groups.py
dpvo/loop_closure/: long_term.py  optim_utils.py
dpvo/loop_closure/retrieval/: __init__.py  image_cache.py  retrieval_dbow.py
logs/: euroc.txt  euroc_fast.txt  icl_nuim.txt  tartan.txt  tum_rgbd.txt
logs/dpv_slam/: euroc.txt  tartan.txt  tum_rgbd.txt
